--- a/Exercises/Exercises/Zad5/Zad5.vcxproj
+++ b/Exercises/Exercises/Zad5/Zad5.vcxproj
@@ -117,6 +117,9 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RowDetails.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
