--- a/Exercises/Exercises/Zad7/Zad7.vcxproj
+++ b/Exercises/Exercises/Zad7/Zad7.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GaussSeidel.h" />
     <ClInclude Include="Jacobi.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
