--- a/Exercises/Exercises/Zad7/Zad7.vcxproj.filters
+++ b/Exercises/Exercises/Zad7/Zad7.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="GaussSeidel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SOR.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
